[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/font_default.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/background.jpg" type="Texture" id=5]
[ext_resource path="res://Menu/style_disabled.tres" type="StyleBox" id=6]
[ext_resource path="res://Menu/style_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Menu/style_focus.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbcButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.439
margin_top = 53.5003
margin_right = 159.561
margin_bottom = 91.5003
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bContinuer" type="Button" parent="vbcButtons"]
margin_right = 320.0
margin_bottom = 13.0
focus_neighbour_top = NodePath("../bQuitter")
focus_neighbour_bottom = NodePath("../bQuitter")
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "continuer"

[node name="bQuitter" type="Button" parent="vbcButtons"]
margin_top = 17.0
margin_right = 320.0
margin_bottom = 30.0
focus_neighbour_top = NodePath("../bContinuer")
focus_neighbour_bottom = NodePath("../bContinuer")
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "quitter"

[node name="credits" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -325.553
margin_top = 14.1362
margin_right = 33.4472
margin_bottom = 36.1362
custom_fonts/font = ExtResource( 4 )
text = "Â©MARTIN (2022)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = -0.357559
margin_right = 321.0
margin_bottom = 80.6424
text = "Eklypse"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="vbcButtons/bContinuer" to="." method="_on_bContinuer_pressed"]
[connection signal="pressed" from="vbcButtons/bContinuer" to="." method="_on_bJouer_pressed"]
[connection signal="pressed" from="vbcButtons/bContinuer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="vbcButtons/bQuitter" to="." method="_on_bQuitter_pressed"]
[connection signal="pressed" from="vbcButtons/bQuitter" to="." method="_on_quitter_pressed"]
